--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h1 class="text-center mb-4">Portal Principal - RTM</h1>
     <div class="row g-4">
       <div class="col-md-6">
-        <a href="coordenadas.html" class="btn btn-primary w-100 btn-lg">📍 Actualizar Coordenadas</a>
+        <a href="Coordenadas.html" class="btn btn-primary w-100 btn-lg">📍 Actualizar Coordenadas</a>
       </div>
       <div class="col-md-6">
         <a href="nombre_direccion.html" class="btn btn-success w-100 btn-lg">📝 Actualizar Nombre y Dirección</a>
