--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -28,40 +28,57 @@
     </form>
   </div>
   <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
-  <script>
-    function obtenerCoordenadas() {
-      const input = document.getElementById("coordenadas");
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(pos => {
-          const coord = pos.coords.latitude + "," + pos.coords.longitude;
-          input.value = coord;
-        }, err => alert("⚠️ No se pudo obtener la ubicación."));
-      } else {
-        alert("❌ Geolocalización no disponible.");
-      }
+<script>
+  function crearClienteNuevo() {
+    const ruta = document.getElementById("ruta").value;
+    const semana = document.getElementById("semana").value;
+    const dia = document.getElementById("dia").value;
+    const nombre = document.getElementById("nombre").value;
+    const direccion = document.getElementById("direccion").value;
+    const id = document.getElementById("id").value;
+    const rtn = document.getElementById("rtn").value;
+    const telefono = document.getElementById("telefono").value;
+    const coordenadas = document.getElementById("latitud").value;
+
+    if (!ruta || !semana || !dia || !nombre || !direccion || !id || !rtn || !telefono || !coordenadas) {
+      alert("⚠️ Por favor completa todos los campos.");
+      return;
     }
 
-    function enviarFormulario() {
-      const datos = {
-        ruta: ruta.value, semana: semana.value, dia: dia.value,
-        nombre: nombre.value, direccion: direccion.value,
-        id: id.value, rtn: rtn.value, telefono: telefono.value,
-        coordenadas: coordenadas.value
-      };
-      if (Object.values(datos).some(v => !v)) {
-        alert("⚠️ Por favor completa todos los campos.");
-        return;
-      }
-      fetch('https://script.google.com/macros/s/AKfycbzTeY0pmn6tmgkZ4DHrhZveRplKm1J1b-4jY8O2vqX_Ktm8kdOtZrXj2r4y6JsdTfZQDQ/exec', {
-        method: 'POST',
-        mode: 'no-cors',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify(datos)
-      }).then(() => {
-        alert("✅ Cliente creado correctamente.");
-        document.querySelector("form").reset();
-      }).catch(error => alert("❌ Error al enviar los datos: " + error));
-    }
-  </script>
+    fetch('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', {
+      method: 'POST',
+      mode: 'no-cors',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        tipo: "crear_cliente_nuevo",
+        ruta: ruta,
+        semana: semana,
+        dia: dia,
+        nombre: nombre,
+        direccion: direccion,
+        id: id,
+        rtn: rtn,
+        telefono: telefono,
+        coordenadas: coordenadas
+      })
+    })
+    .then(() => {
+      alert("✅ Cliente creado correctamente.");
+      document.getElementById("ruta").value = "";
+      document.getElementById("semana").value = "";
+      document.getElementById("dia").value = "";
+      document.getElementById("nombre").value = "";
+      document.getElementById("direccion").value = "";
+      document.getElementById("id").value = "";
+      document.getElementById("rtn").value = "";
+      document.getElementById("telefono").value = "";
+      document.getElementById("latitud").value = "";
+    })
+    .catch(error => {
+      alert("❌ Error al enviar los datos: " + error);
+    });
+  }
+</script>
+
 </body>
 </html>
