--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -2,83 +2,199 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crear Cliente Nuevo</title>
+  <title>Formulario con Coordenadas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    .floating-btn { position: fixed; bottom: 20px; right: 20px; z-index: 999; }
+    .readonly {
+      background-color: #e9ecef;
+      border: 2px dashed #adb5bd;
+      color: #495057;
+      font-style: italic;
+    }
+    .completo {
+      background-color: #d4edda !important;
+      border: 2px solid #28a745 !important;
+      color: #155724 !important;
+      font-weight: bold;
+    }
+    footer {
+      background-color: #0b0b0b;
+      padding: 20px 0;
+      margin-top: 50px;
+      text-align: center;
+    }
+    footer img {
+      max-height: 60px;
+    }
   </style>
-</head>
-<body>
-  <div class="container mt-5">
-    <h2 class="text-center mb-4">Crear Cliente Nuevo</h2>
-    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFormulario();">
-      <input class="form-control mb-2" id="ruta" placeholder="Ruta" required />
-      <input class="form-control mb-2" id="semana" placeholder="Semana de Visita" required />
-      <input class="form-control mb-2" id="dia" placeholder="Día de Visita" required />
-      <input class="form-control mb-2" id="nombre" placeholder="Nombre del Cliente" required />
-      <input class="form-control mb-2" id="direccion" placeholder="Dirección" required />
-      <input class="form-control mb-2" id="id" placeholder="ID" required />
-      <input class="form-control mb-2" id="rtn" placeholder="RTN" required />
-      <input class="form-control mb-2" id="telefono" placeholder="Teléfono" required />
-      <input class="form-control mb-2 readonly" id="coordenadas" readonly placeholder="Coordenadas" />
-      <button type="button" class="btn btn-info w-100 mb-2" onclick="obtenerCoordenadas()">📍 Obtener Coordenadas</button>
-      <button type="submit" class="btn btn-success w-100">📤 Enviar</button>
-    </form>
-  </div>
-  <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
-<script>
-  function crearClienteNuevo() {
-    const ruta = document.getElementById("ruta").value;
-    const semana = document.getElementById("semana").value;
-    const dia = document.getElementById("dia").value;
-    const nombre = document.getElementById("nombre").value;
-    const direccion = document.getElementById("direccion").value;
-    const id = document.getElementById("id").value;
-    const rtn = document.getElementById("rtn").value;
-    const telefono = document.getElementById("telefono").value;
-    const coordenadas = document.getElementById("latitud").value;
+  <script>
+    let clientes = [];
 
-    if (!ruta || !semana || !dia || !nombre || !direccion || !id || !rtn || !telefono || !coordenadas) {
-      alert("⚠️ Por favor completa todos los campos.");
-      return;
+    fetch('clientes.json')
+      .then(response => response.json())
+      .then(data => {
+        clientes = data;
+      })
+      .catch(error => {
+        alert("❌ Error al cargar la lista de clientes: " + error);
+      });
+
+    // Función para buscar cliente por código
+    function buscarClientePorCodigo() {
+      const codigo = document.getElementById("codigo").value.trim();
+      const cliente = clientes.find(c => c.codigo === codigo);
+      const inputNombre = document.getElementById("nombre");
+
+      if (cliente) {
+        inputNombre.value = cliente.nombre;
+        inputNombre.classList.add("completo");
+      } else {
+        inputNombre.value = "";
+        inputNombre.classList.remove("completo");
+        alert("⚠️ Cliente no encontrado.");
+      }
     }
 
-    fetch('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        tipo: "crear_cliente_nuevo",
-        ruta: ruta,
-        semana: semana,
-        dia: dia,
-        nombre: nombre,
-        direccion: direccion,
-        id: id,
-        rtn: rtn,
-        telefono: telefono,
-        coordenadas: coordenadas
-      })
-    })
-    .then(() => {
-      alert("✅ Cliente creado correctamente.");
-      document.getElementById("ruta").value = "";
-      document.getElementById("semana").value = "";
-      document.getElementById("dia").value = "";
-      document.getElementById("nombre").value = "";
-      document.getElementById("direccion").value = "";
-      document.getElementById("id").value = "";
-      document.getElementById("rtn").value = "";
-      document.getElementById("telefono").value = "";
-      document.getElementById("latitud").value = "";
-    })
-    .catch(error => {
-      alert("❌ Error al enviar los datos: " + error);
-    });
-  }
-</script>
+    // Función para obtener coordenadas
+    function obtenerCoordenadas(idLatitud) {
+      const inputLat = document.getElementById(idLatitud);
+      inputLat.value = ""; // Limpia antes de obtener nuevas
 
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          const latLon = position.coords.latitude + "," + position.coords.longitude;
+          inputLat.value = latLon;
+          inputLat.classList.add("completo");
+        }, function(error) {
+          alert("⚠️ No se pudieron obtener las coordenadas. Verifica que el GPS esté activo.");
+          console.error("Geolocation error:", error);
+        }, {
+          enableHighAccuracy: true,
+          timeout: 10000,
+          maximumAge: 0
+        });
+      } else {
+        alert("❌ La geolocalización no es compatible con este navegador.");
+      }
+    }
+
+    // Función para copiar coordenadas al portapapeles
+    function copiarCoordenadas(idLatitud) {
+      const coordenadas = document.getElementById(idLatitud).value;
+      if (coordenadas) {
+        navigator.clipboard.writeText(coordenadas).then(() => {
+          alert("📋 ¡Coordenadas copiadas al portapapeles!");
+        }).catch((err) => {
+          alert("❌ Error al copiar las coordenadas: " + err);
+        });
+      } else {
+        alert("⚠️ No hay coordenadas para copiar.");
+      }
+    }
+
+    // Función para refrescar el formulario
+    function refrescarFormulario() {
+      window.location.reload();
+    }
+
+    // Función para enviar los datos del formulario
+    function enviarFormulario(url, idLatitud) {
+      const nombre = document.getElementById("nombre").value;
+      const codigo = document.getElementById("codigo").value;
+      const latLon = document.getElementById(idLatitud).value;
+
+      if (!nombre || !codigo || !latLon) {
+        alert("⚠️ Por favor completa todos los campos.");
+        return;
+      }
+
+      // Cambio de URL a la nueva hoja de Google Apps Script
+      fetch('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          nombre: nombre,
+          codigo: codigo,
+          latitud: latLon.split(",")[0],
+          longitud: latLon.split(",")[1]
+        })
+      })
+      .then(() => {
+        alert("✅ Datos enviados correctamente.");
+        document.getElementById("codigo").value = "";
+        document.getElementById("nombre").value = "";
+        document.getElementById(idLatitud).value = "";
+        document.getElementById("nombre").classList.remove("completo");
+        document.getElementById(idLatitud).classList.remove("completo");
+      })
+      .catch(error => {
+        alert("❌ Error al enviar los datos: " + error);
+      });
+    }
+  </script>
+</head>
+<body>
+  <!-- Página principal de coordenadas -->
+  <div class="container mt-5">
+    <h2 class="text-center mb-4">Actualización de Coordenadas</h2>
+    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFormulario('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', 'latitud');">
+      <div class="mb-3">
+        <label for="codigo" class="form-label">Código del Cliente:</label>
+        <input type="text" class="form-control" id="codigo" required onblur="buscarClientePorCodigo()">
+      </div>
+
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre del Cliente:</label>
+        <input type="text" class="form-control readonly" id="nombre" readonly>
+      </div>
+
+      <div class="mb-3">
+        <label for="latitud" class="form-label">Coordenadas (Latitud, Longitud):</label>
+        <input type="text" class="form-control readonly" id="latitud" readonly>
+      </div>
+
+      <button type="button" class="btn btn-info w-100" onclick="obtenerCoordenadas('latitud')">📍 Obtener Coordenadas</button>
+      <button type="button" class="btn btn-secondary w-100 mt-2" onclick="copiarCoordenadas('latitud')">📋 Copiar Coordenadas</button>
+      <button type="submit" class="btn btn-primary w-100 mt-3">📤 Enviar</button>
+      <button type="button" class="btn btn-warning w-100 mt-2" onclick="refrescarFormulario()">🔄 Refrescar</button>
+    </form>
+  </div>
+
+  <!-- Página de crear cliente nuevo -->
+  <div class="container mt-5">
+    <h2 class="text-center mb-4">Creación de Cliente Nuevo</h2>
+    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFormulario('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', 'coordenadas');">
+      <div class="mb-3">
+        <label for="codigo" class="form-label">Código del Cliente:</label>
+        <input type="text" class="form-control" id="codigo" required onblur="buscarClientePorCodigo()">
+      </div>
+
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre del Cliente:</label>
+        <input type="text" class="form-control readonly" id="nombre" readonly>
+      </div>
+
+      <div class="mb-3">
+        <label for="coordenadas" class="form-label">Coordenadas (Latitud, Longitud):</label>
+        <input type="text" class="form-control readonly" id="coordenadas" readonly>
+      </div>
+
+      <button type="button" class="btn btn-info w-100" onclick="obtenerCoordenadas('coordenadas')">📍 Obtener Coordenadas</button>
+      <button type="button" class="btn btn-secondary w-100 mt-2" onclick="copiarCoordenadas('coordenadas')">📋 Copiar Coordenadas</button>
+      <button type="submit" class="btn btn-primary w-100 mt-3">📤 Enviar</button>
+      <button type="button" class="btn btn-warning w-100 mt-2" onclick="refrescarFormulario()">🔄 Refrescar</button>
+    </form>
+  </div>
+
+  <footer>
+    <img src="ChatGPT Image 22 abr 2025 08_25_00.png" alt="Logo RTM" />
+    <p class="text-white mt-2 mb-0">© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+  </footer>
 </body>
 </html>
+
