--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -67,43 +67,44 @@
         return;
       }
 
-      fetch('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          tipo: "crear",
-          ruta: ruta,
-          nombre: nombre,
-          direccion: direccion,
-          semana: semana,
-          dia: dia,
-          id: id,
-          rtn: rtn,
-          telefono: telefono,
-          coordenadas: coordenadas
-        })
-      })
-      .then(response => {
-        if (response.ok) {
-          alert("✅ Cliente creado exitosamente.");
-          document.getElementById("ruta").value = "";
-          document.getElementById("nombre").value = "";
-          document.getElementById("direccion").value = "";
-          document.getElementById("semana").value = "";
-          document.getElementById("dia").value = "";
-          document.getElementById("id").value = "";
-          document.getElementById("rtn").value = "";
-          document.getElementById("telefono").value = "";
-          document.getElementById("coordenadas").value = "";
-        } else {
-          alert("❌ Error al enviar los datos. Inténtalo de nuevo.");
-        }
-      })
-      .catch(error => {
-        alert("❌ Error al conectar con la hoja de cálculo: " + error);
-      });
+      fetch('https://script.google.com/macros/s/AKfycbzmtie8bK1COkX5D7m4jrGZBTK7ro_F8Ej-7afg7tnkdyhfi_Il1JApJ1SRBHYei-YC2Q/exec', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({
+    tipo: "crear",
+    ruta: document.getElementById("ruta").value.trim(),
+    nombre: document.getElementById("nombre").value.trim(),
+    direccion: document.getElementById("direccion").value.trim(),
+    semana: document.getElementById("semana").value,
+    dia: document.getElementById("dia").value,
+    id: document.getElementById("id").value.trim(),
+    rtn: document.getElementById("rtn").value.trim(),
+    telefono: document.getElementById("telefono").value.trim(),
+    coordenadas: document.getElementById("coordenadas").value.trim()
+  })
+})
+.then(response => response.json()) // Convertir la respuesta en JSON
+.then(data => {
+  if (data.estado === "éxito") {
+    alert("✅ Cliente creado exitosamente.");
+    document.getElementById("ruta").value = "";
+    document.getElementById("nombre").value = "";
+    document.getElementById("direccion").value = "";
+    document.getElementById("semana").value = "";
+    document.getElementById("dia").value = "";
+    document.getElementById("id").value = "";
+    document.getElementById("rtn").value = "";
+    document.getElementById("telefono").value = "";
+    document.getElementById("coordenadas").value = "";
+  } else {
+    alert("❌ Error al enviar los datos: " + data.mensaje);
+  }
+})
+.catch(error => {
+  console.error("Error al conectar con la hoja:", error);
+  alert("❌ Error al conectar con la hoja de cálculo: " + error);
+});
+
     }
 
     function refrescarFormulario() {
