--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .readonly {
-      background-color: #e9ecef;
+      background-color: #f8f9fa;
       border: 2px dashed #adb5bd;
       color: #495057;
       font-style: italic;
@@ -19,7 +19,7 @@
       font-weight: bold;
     }
     footer {
-      background-color: #f8f9fa;
+      background-color: #f1f1f1;
       padding: 20px 0;
       margin-top: 50px;
       text-align: center;
@@ -31,7 +31,7 @@
   <script>
     function obtenerCoordenadas() {
       const inputLat = document.getElementById("coordenadas");
-      inputLat.value = ""; // Limpiar campo
+      inputLat.value = "";
 
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function(position) {
@@ -67,49 +67,40 @@
         return;
       }
 
-      const latitud = coordenadas.split(",")[0];
-      const longitud = coordenadas.split(",")[1];
-
-      const datos = {
-        tipo: "crear",
-        ruta: ruta,
-        nombre: nombre,
-        direccion: direccion,
-        semana: semana,
-        dia: dia,
-        id: id,
-        rtn: rtn,
-        telefono: telefono,
-        latitud: latitud,
-        longitud: longitud
-      };
-
-      fetch('https://script.google.com/macros/s/AKfycbzmtie8bK1COkX5D7m4jrGZBTK7ro_F8Ej-7afg7tnkdyhfi_Il1JApJ1SRBHYei-YC2Q/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbzPGD9bYZQtg5K-u6_-EQdlnIkMprewi8LaDdpgF69zGFJN4j-cm_p0BlWCKPptbv4cNw/exec', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(datos)
+        body: JSON.stringify({
+          tipo: "crear",
+          ruta: ruta,
+          nombre: nombre,
+          direccion: direccion,
+          semana: semana,
+          dia: dia,
+          id: id,
+          rtn: rtn,
+          telefono: telefono,
+          coordenadas: coordenadas
+        })
       })
-      .then(response => response.json())
-      .then(data => {
-        if (data.result === "success") {
-          alert("✅ Cliente creado exitosamente.");
-          document.getElementById("ruta").value = "";
-          document.getElementById("nombre").value = "";
-          document.getElementById("direccion").value = "";
-          document.getElementById("semana").value = "";
-          document.getElementById("dia").value = "";
-          document.getElementById("id").value = "";
-          document.getElementById("rtn").value = "";
-          document.getElementById("telefono").value = "";
-          document.getElementById("coordenadas").value = "";
-          document.getElementById("coordenadas").classList.remove("completo");
-        } else {
-          alert("❌ Error del servidor: " + (data.error || "Respuesta desconocida."));
+      .then(response => response.text())
+      .then(text => {
+        try {
+          const data = JSON.parse(text);
+          if (data.estado === "éxito") {
+            alert("✅ Cliente creado exitosamente.");
+            document.querySelector("form").reset();
+            document.getElementById("coordenadas").classList.remove("completo");
+          } else {
+            alert("❌ Error al enviar los datos: " + data.mensaje);
+          }
+        } catch (e) {
+          alert("❌ Respuesta inesperada del servidor: " + text);
         }
       })
       .catch(error => {
-        console.error("Fetch error:", error);
-        alert("❌ Error al enviar los datos. Revisa la consola para más detalles.");
+        console.error("Error al conectar con la hoja:", error);
+        alert("❌ Error al conectar con la hoja de cálculo: " + error);
       });
     }
 
@@ -194,5 +185,4 @@
   </footer>
 </body>
 </html>
-
 
