--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -28,7 +28,28 @@
       max-height: 60px;
     }
   </style>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-database.js"></script>
+
   <script>
+    // Configuración de Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyAn_Q9vhDUpv7HIZmXpImqM20OQkSNnNp8",
+      authDomain: "clientes-rtm.firebaseapp.com",
+      databaseURL: "https://clientes-rtm-default-rtdb.firebaseio.com",
+      projectId: "clientes-rtm",
+      storageBucket: "clientes-rtm.firebasestorage.app",
+      messagingSenderId: "1090568034302",
+      appId: "1:1090568034302:web:a0dc73177de25db16b12af",
+      measurementId: "G-3JGC5EE4NK"
+    };
+
+    // Inicializa Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database(app);
+
     function obtenerCoordenadas() {
       const inputLat = document.getElementById("coordenadas");
       inputLat.value = "";
@@ -51,6 +72,18 @@
       }
     }
 
+    // Función para guardar datos en Firebase
+    function saveClientData(clienteId, data) {
+      const clientRef = database.ref('clientes/' + clienteId);
+      clientRef.set(data)
+        .then(() => {
+          console.log("Datos guardados correctamente.");
+        })
+        .catch((error) => {
+          console.error("Error al guardar los datos:", error);
+        });
+    }
+
     function enviarFormulario() {
       const ruta = document.getElementById("ruta").value.trim();
       const nombre = document.getElementById("nombre").value.trim();
@@ -67,41 +100,25 @@
         return;
       }
 
-      fetch('https://script.google.com/macros/s/AKfycbzPGD9bYZQtg5K-u6_-EQdlnIkMprewi8LaDdpgF69zGFJN4j-cm_p0BlWCKPptbv4cNw/exec', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({
-    tipo: "crear",
-    ruta: ruta,
-    nombre: nombre,
-    direccion: direccion,
-    semana: semana,
-    dia: dia,
-    id: id,
-    rtn: rtn,
-    telefono: telefono,
-    coordenadas: coordenadas
-  })
-})
-      .then(response => response.text())
-      .then(text => {
-        try {
-          const data = JSON.parse(text);
-          if (data.estado === "éxito") {
-            alert("✅ Cliente creado exitosamente.");
-            document.querySelector("form").reset();
-            document.getElementById("coordenadas").classList.remove("completo");
-          } else {
-            alert("❌ Error al enviar los datos: " + data.mensaje);
-          }
-        } catch (e) {
-          alert("❌ Respuesta inesperada del servidor: " + text);
-        }
-      })
-      .catch(error => {
-        console.error("Error al conectar con la hoja:", error);
-        alert("❌ Error al conectar con la hoja de cálculo: " + error);
-      });
+      // Crea el objeto de datos para guardar
+      const clientData = {
+        ruta: ruta,
+        nombre: nombre,
+        direccion: direccion,
+        semana: semana,
+        dia: dia,
+        id: id,
+        rtn: rtn,
+        telefono: telefono,
+        coordenadas: coordenadas
+      };
+
+      // Llama a la función para guardar los datos en Firebase
+      saveClientData(id, clientData);
+
+      alert("✅ Cliente creado exitosamente.");
+      document.querySelector("form").reset();
+      document.getElementById("coordenadas").classList.remove("completo");
     }
 
     function refrescarFormulario() {
@@ -109,6 +126,7 @@
     }
   </script>
 </head>
+
 <body>
   <div class="container mt-5">
     <h2 class="text-center mb-4">Crear Cliente Nuevo</h2>
@@ -185,4 +203,3 @@
   </footer>
 </body>
 </html>
-
