--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -29,27 +29,7 @@
     }
   </style>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-database.js"></script>
-
   <script>
-    // Configuración de Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyAn_Q9vhDUpv7HIZmXpImqM20OQkSNnNp8",
-      authDomain: "clientes-rtm.firebaseapp.com",
-      databaseURL: "https://clientes-rtm-default-rtdb.firebaseio.com",
-      projectId: "clientes-rtm",
-      storageBucket: "clientes-rtm.firebasestorage.app",
-      messagingSenderId: "1090568034302",
-      appId: "1:1090568034302:web:a0dc73177de25db16b12af",
-      measurementId: "G-3JGC5EE4NK"
-    };
-
-    // Inicializa Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const database = firebase.database(app);
-
     function obtenerCoordenadas() {
       const inputLat = document.getElementById("coordenadas");
       inputLat.value = "";
@@ -72,18 +52,6 @@
       }
     }
 
-    // Función para guardar datos en Firebase
-    function saveClientData(clienteId, data) {
-      const clientRef = database.ref('clientes/' + clienteId);
-      clientRef.set(data)
-        .then(() => {
-          console.log("Datos guardados correctamente.");
-        })
-        .catch((error) => {
-          console.error("Error al guardar los datos:", error);
-        });
-    }
-
     function enviarFormulario() {
       const ruta = document.getElementById("ruta").value.trim();
       const nombre = document.getElementById("nombre").value.trim();
@@ -100,25 +68,35 @@
         return;
       }
 
-      // Crea el objeto de datos para guardar
-      const clientData = {
-        ruta: ruta,
-        nombre: nombre,
-        direccion: direccion,
-        semana: semana,
-        dia: dia,
-        id: id,
-        rtn: rtn,
-        telefono: telefono,
-        coordenadas: coordenadas
-      };
+      const [latitud, longitud] = coordenadas.split(",");
 
-      // Llama a la función para guardar los datos en Firebase
-      saveClientData(id, clientData);
-
-      alert("✅ Cliente creado exitosamente.");
-      document.querySelector("form").reset();
-      document.getElementById("coordenadas").classList.remove("completo");
+      fetch('https://script.google.com/macros/s/AKfycbwlokjzWuk3bEeeV-VFF8nv7lopVci-UFT1YKzlZQV_zNMd2XGYAR1FFAyTD_lGo-kV/exec', {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          ruta: ruta,
+          nombre: nombre,
+          direccion: direccion,
+          semana: semana,
+          dia: dia,
+          id: id,
+          rtn: rtn,
+          telefono: telefono,
+          latitud: latitud,
+          longitud: longitud
+        })
+      })
+      .then(() => {
+        alert("✅ Cliente creado exitosamente.");
+        document.querySelector("form").reset();
+        document.getElementById("coordenadas").classList.remove("completo");
+      })
+      .catch((error) => {
+        alert("❌ Error al enviar los datos: " + error);
+      });
     }
 
     function refrescarFormulario() {
