--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -18,56 +17,103 @@
 <body>
   <div class="container mt-5">
     <h2 class="text-center mb-4">Actualizar Nombre y Dirección</h2>
-    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFormulario();">
+    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarNombreDireccion();">
+      
       <div class="mb-3">
         <label for="codigo" class="form-label">Código del Cliente:</label>
         <input type="text" class="form-control" id="codigo" required>
       </div>
+
+      <div class="mb-3">
+        <label for="nombreActual" class="form-label">Nombre Actual del Cliente:</label>
+        <input type="text" class="form-control" id="nombreActual" readonly>
+      </div>
+
       <div class="mb-3">
         <label for="nombre" class="form-label">Nuevo Nombre:</label>
         <input type="text" class="form-control" id="nombre" required>
       </div>
+
       <div class="mb-3">
         <label for="direccion" class="form-label">Nueva Dirección:</label>
         <input type="text" class="form-control" id="direccion" required>
       </div>
+
       <button type="submit" class="btn btn-primary w-100">📤 Enviar</button>
     </form>
   </div>
-  <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
-<script>
-  function enviarNombreDireccion() {
-    const codigo = document.getElementById("codigo").value;
-    const nombre = document.getElementById("nombre").value;
-    const direccion = document.getElementById("direccion").value;
 
-    if (!codigo || !nombre || !direccion) {
-      alert("⚠️ Por favor completa todos los campos.");
-      return;
+  <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
+
+  <script>
+    function enviarNombreDireccion() {
+      const codigo = document.getElementById("codigo").value;
+      const nombre = document.getElementById("nombre").value;
+      const direccion = document.getElementById("direccion").value;
+
+      if (!codigo || !nombre || !direccion) {
+        alert("⚠️ Por favor completa todos los campos.");
+        return;
+      }
+
+      fetch('https://script.google.com/macros/s/AKfycbxesm6QMwx2t-1e7Zn0kJ_wp-PT8X6BrTAJViwpHLA6fLW8GIvI2aSpRVAyExmON0wr/exec', {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          tipo: "actualizar_nombre_direccion",
+          codigo: codigo,
+          nombre: nombre,
+          direccion: direccion
+        })
+      })
+      .then(() => {
+        alert("✅ Datos enviados correctamente.");
+        document.getElementById("codigo").value = "";
+        document.getElementById("nombre").value = "";
+        document.getElementById("direccion").value = "";
+        document.getElementById("nombreActual").value = "";
+      })
+      .catch(error => {
+        alert("❌ Error al enviar los datos: " + error);
+      });
     }
 
-    fetch('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        tipo: "actualizar_nombre_direccion",
-        codigo: codigo,
-        nombre: nombre,
-        direccion: direccion
-      })
-    })
-    .then(() => {
-      alert("✅ Datos enviados correctamente.");
-      document.getElementById("codigo").value = "";
-      document.getElementById("nombre").value = "";
-      document.getElementById("direccion").value = "";
-    })
-    .catch(error => {
-      alert("❌ Error al enviar los datos: " + error);
+    // Cambia esta URL por la real de tu archivo clientes.json en GitHub
+    const urlClientes = "C:\Users\dtrejo\OneDrive - Embotelladora la Mariposa,S.A\Escritorio\TEMPORAL\clientes.json";
+
+    document.getElementById("codigo").addEventListener("input", async function() {
+      const codigoIngresado = this.value.trim();
+      const nombreActualInput = document.getElementById("nombreActual");
+
+      if (codigoIngresado.length === 0) {
+        nombreActualInput.value = "";
+        return;
+      }
+
+      try {
+        const response = await fetch(urlClientes);
+        const clientes = await response.json();
+
+        const clienteEncontrado = clientes.find(c => c.codigo === codigoIngresado);
+
+        if (clienteEncontrado) {
+          nombreActualInput.value = clienteEncontrado.nombre;
+        } else {
+          nombreActualInput.value = "Cliente no encontrado";
+        }
+      } catch (error) {
+        console.error("Error al cargar clientes.json:", error);
+        nombreActualInput.value = "Error al buscar";
+      }
     });
-  }
-</script>
+  </script>
 
 </body>
 </html>
+
+
+
+
+
+
