--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -80,7 +80,7 @@
     }
 
     // Cambia esta URL por la real de tu archivo clientes.json en GitHub
-    const urlClientes = "C:\Users\dtrejo\OneDrive - Embotelladora la Mariposa,S.A\Escritorio\TEMPORAL\clientes.json";
+    const urlClientes = "clientes.json";
 
     document.getElementById("codigo").addEventListener("input", async function() {
       const codigoIngresado = this.value.trim();
