--- a/frecuencia_visita.html
+++ b/frecuencia_visita.html
@@ -90,6 +90,7 @@
 
     function enviarFrecuenciaVisita() {
       const codigo = document.getElementById("codigo").value;
+      const codigo = document.getElementById("nombre").value;
       const ruta = document.getElementById("ruta").value;
       const semana = document.getElementById("semana").value;
       const dia = document.getElementById("dia").value;
